--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "big.js": "^5.2.2",
+    "bootstrap": "^4.6.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
